# torsion-tuner

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  README.md  generate_test_pdb.py  index.html  mkdocs.yml  objects.inv  publish.sh  pyproject.toml  requirements.txt
.github/workflows/: docs.yml  lint.yml  test.yml
SCIENTIFIC_VALIDATION/: index.html
VALIDATION_ROADMAP/: index.html
api/: index.html
api/data/: index.html
api/kinematics/: index.html
api/model/: index.html
api/utils/: index.html
architecture/: index.html
docs/: SCIENTIFIC_VALIDATION.md  VALIDATION_ROADMAP.md  architecture.md  getting-started.md  index.md  limitations.md
docs/api/: data.md  index.md  kinematics.md  model.md  utils.md
docs/tutorials/: multi_modal_refinement.ipynb
examples/: multi_modal_refinement.ipynb  multi_modal_refinement.nbconvert.ipynb
examples/interactive_tutorials/: multi_modal_refinement.ipynb
getting-started/: index.html
javascripts/: mathjax.js
limitations/: index.html
search/: search_index.json
src/: data.py  kinematics.py  model.py  montelione_utils.py  train.py
tests/: conftest.py  test_data_loading.py  test_export.py  test_kinematics_verification.py  test_model.py  test_montelione_utils.py  test_properties.py  test_psvs_parser.py  test_scientific_rigor.py  test_train.py
tests/scientific_benchmarks/: test_2khd.py  test_2rn7.py  test_parity.py  test_regularization.py
tests/scientific_benchmarks/data/2khd/: shifts.csv
tests/scientific_benchmarks/data/2rn7/: shifts.csv
torsiontuner/: data.py  export.py  kinematics.py  model.py  montelione_utils.py  psvs_parser.py  train.py
tutorials/: multi_modal_refinement.ipynb
