[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "torsiontuner"
version = "0.1.0"
description = "GNN-based protein structure refinement via differentiable torsions"
authors = [{name = "George Elkins"}]
dependencies = [
    "jax",
    "jaxlib",
    "optax",
    "equinox",
    "biotite",
    "numpy",
]

[project.optional-dependencies]
dev = [
    "pytest",
]
docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
]
