[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = true

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N"]
ignore = ["N806", "N803"] # Allow non-lowercase variables (common in math/physics)


[project]
name = "torsiontuner"
version = "0.1.0"
description = "GNN-based protein structure refinement via differentiable torsions"
authors = [{name = "George Elkins"}]
license = {text = "MIT"}
dependencies = [
    "jax",
    "jaxlib",
    "optax",
    "equinox",
    "biotite",
    "numpy",
    "diff-biophys",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff",
    "mypy",
]
docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
]
